@@ -1,41 +1,9 @@
-/*
- * SubmissionController.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision$
- *
- * Date: $Date$
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.webui.servlet;
 
@@ -55,7 +23,6 @@ import org.apache.log4j.Logger;
 
 import org.dspace.app.util.SubmissionInfo;
 import org.dspace.app.util.SubmissionStepConfig;
-import org.dspace.app.util.Util;
 import org.dspace.app.webui.submit.JSPStepManager;
 import org.dspace.app.webui.util.FileUploadRequest;
 import org.dspace.app.webui.util.JSPManager;
@@ -68,7 +35,6 @@ import org.dspace.core.Context;
 import org.dspace.core.LogManager;
 import org.dspace.workflow.WorkflowItem;
 import org.dspace.submit.AbstractProcessingStep;
-import org.dspace.submit.step.UploadStep;
 
 /**
  * Submission Manager servlet for DSpace. Handles the initial submission of
@@ -133,7 +99,7 @@ public class SubmissionController extends DSpaceServlet
     public static final int WORKFLOW_FIRST_STEP = 0;
     
     /** path to the JSP shown once the submission is completed */
-    private static String COMPLETE_JSP = "/submit/complete.jsp";
+    private static final String COMPLETE_JSP = "/submit/complete.jsp";
 
     /** log4j logger */
     private static Logger log = Logger
@@ -521,22 +487,6 @@ public class SubmissionController extends DSpaceServlet
     {
         int result = doSaveCurrentState(context, request, response, subInfo, currentStepConfig);
         
-        int currStep=currentStepConfig.getStepNumber();
-        int currPage=AbstractProcessingStep.getCurrentPage(request);
-        double currStepAndPage = Float.parseFloat(currStep+"."+currPage);
-        // default value if we are in workflow
-        double stepAndPageReached = -1;
-        
-        if (!subInfo.isInWorkflow())
-        {
-            stepAndPageReached = Float.parseFloat(getStepReached(subInfo)+"."+JSPStepManager.getPageReached(subInfo));
-        }
-        
-        if (result != AbstractProcessingStep.STATUS_COMPLETE && currStepAndPage != stepAndPageReached)
-        {
-            doStep(context, request, response, subInfo, currStep);
-        }
-        
         // find current Step number
         int currentStepNum;
         if (currentStepConfig == null)
@@ -548,7 +498,22 @@ public class SubmissionController extends DSpaceServlet
             currentStepNum = currentStepConfig.getStepNumber();
         }
 
-        //Check to see if we are actually just going to a 
+        int currPage=AbstractProcessingStep.getCurrentPage(request);
+        double currStepAndPage = Double.parseDouble(currentStepNum+"."+currPage);
+        // default value if we are in workflow
+        double stepAndPageReached = -1;
+        
+        if (!subInfo.isInWorkflow())
+        {
+            stepAndPageReached = Float.parseFloat(getStepReached(subInfo)+"."+JSPStepManager.getPageReached(subInfo));
+        }
+        
+        if (result != AbstractProcessingStep.STATUS_COMPLETE && currStepAndPage != stepAndPageReached)
+        {
+            doStep(context, request, response, subInfo, currentStepNum);
+        }
+        
+        //Check to see if we are actually just going to a
         //previous PAGE within the same step.
         int currentPageNum = AbstractProcessingStep.getCurrentPage(request);
         
@@ -588,7 +553,7 @@ public class SubmissionController extends DSpaceServlet
             {    
                 //flag to JSPStepManager that we are going backwards
                 //an entire step
-                request.setAttribute("step.backwards", new Boolean(true));
+                request.setAttribute("step.backwards", Boolean.TRUE);
                 
                 // flag that we are going back to the start of this step (for JSPStepManager class)
                 setBeginningOfStep(request, true);
@@ -1098,14 +1063,7 @@ public class SubmissionController extends DSpaceServlet
     {
         SubmissionStepConfig step = getCurrentStepConfig(request, si);
 
-        if ((step != null) && (getPreviousVisibleStep(request, si) == null))
-        {
-            return true;
-        }
-        else
-        {
-            return false;
-        }
+        return ((step != null) && (getPreviousVisibleStep(request, si) == null));
     }
     
     /**
@@ -1186,7 +1144,7 @@ public class SubmissionController extends DSpaceServlet
     public static void setBeginningOfStep(HttpServletRequest request,
             boolean beginningOfStep)
     {
-        request.setAttribute("step.start", new Boolean(beginningOfStep));
+        request.setAttribute("step.start", Boolean.valueOf(beginningOfStep));
     }
 
     
@@ -1226,7 +1184,7 @@ public class SubmissionController extends DSpaceServlet
      */
     private static void setCancellationInProgress(HttpServletRequest request, boolean cancellationInProgress)
     {
-        request.setAttribute("submission.cancellation", new Boolean(cancellationInProgress));
+        request.setAttribute("submission.cancellation", Boolean.valueOf(cancellationInProgress));
     }
     
     
@@ -1466,7 +1424,10 @@ public class SubmissionController extends DSpaceServlet
                     filePath = wrapper.getFilesystemName(fileName);
                 
                     // cleanup our temp file
-                    temp.delete();
+                    if (!temp.delete())
+                    {
+                        log.error("Unable to delete temporary file");
+                    }
                     
                     //save this file's info to request (for UploadStep class)
                     request.setAttribute(fileName + "-path", filePath);
