@@ -1,41 +1,9 @@
-/*
- * CollectionWizardServlet.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision$
- *
- * Date: $Date$
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.webui.servlet.admin;
 
@@ -51,6 +19,7 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+import org.apache.commons.lang.StringUtils;
 import org.apache.log4j.Logger;
 import org.dspace.app.util.AuthorizeUtil;
 import org.dspace.app.webui.servlet.DSpaceServlet;
@@ -59,6 +28,7 @@ import org.dspace.app.webui.util.JSPManager;
 import org.dspace.app.webui.util.UIUtil;
 import org.dspace.authorize.AuthorizeException;
 import org.dspace.authorize.AuthorizeManager;
+import org.dspace.authorize.ResourcePolicy;
 import org.dspace.content.Bitstream;
 import org.dspace.content.BitstreamFormat;
 import org.dspace.content.Collection;
@@ -82,37 +52,37 @@ import org.dspace.eperson.Group;
 public class CollectionWizardServlet extends DSpaceServlet
 {
     /** Initial questions page */
-    public final static int INITIAL_QUESTIONS = 1;
+    public static final int INITIAL_QUESTIONS = 1;
 
     /** Basic information page */
-    public final static int BASIC_INFO = 2;
+    public static final int BASIC_INFO = 2;
 
     /** Permissions pages */
-    public final static int PERMISSIONS = 3;
+    public static final int PERMISSIONS = 3;
 
     /** Default item page */
-    public final static int DEFAULT_ITEM = 4;
+    public static final int DEFAULT_ITEM = 4;
 
     /** Summary page */
-    public final static int SUMMARY = 5;
+    public static final int SUMMARY = 5;
 
     /** Permissions page for who gets read permissions on new items */
-    public final static int PERM_READ = 10;
+    public static final int PERM_READ = 10;
 
     /** Permissions page for submitters */
-    public final static int PERM_SUBMIT = 11;
+    public static final int PERM_SUBMIT = 11;
 
     /** Permissions page for workflow step 1 */
-    public final static int PERM_WF1 = 12;
+    public static final int PERM_WF1 = 12;
 
     /** Permissions page for workflow step 2 */
-    public final static int PERM_WF2 = 13;
+    public static final int PERM_WF2 = 13;
 
     /** Permissions page for workflow step 3 */
-    public final static int PERM_WF3 = 14;
+    public static final int PERM_WF3 = 14;
 
     /** Permissions page for collection administrators */
-    public final static int PERM_ADMIN = 15;
+    public static final int PERM_ADMIN = 15;
 
     /** Logger */
     private static Logger log = Logger.getLogger(CollectionWizardServlet.class);
@@ -179,43 +149,43 @@ public class CollectionWizardServlet extends DSpaceServlet
             if (AuthorizeManager.isAdmin(context))
             {
                 // set a variable to show all buttons
-                request.setAttribute("sysadmin_button", new Boolean(true));
+                request.setAttribute("sysadmin_button", Boolean.TRUE);
             }
             
             try 
             {
                 AuthorizeUtil.authorizeManageAdminGroup(context, newCollection);                
-                request.setAttribute("admin_create_button", new Boolean(true));
+                request.setAttribute("admin_create_button", Boolean.TRUE);
             }
             catch (AuthorizeException authex) {
-                request.setAttribute("admin_create_button", new Boolean(false));
+                request.setAttribute("admin_create_button", Boolean.FALSE);
             }
             
             try 
             {
                 AuthorizeUtil.authorizeManageSubmittersGroup(context, newCollection);                
-                request.setAttribute("submitters_button", new Boolean(true));
+                request.setAttribute("submitters_button", Boolean.TRUE);
             }
             catch (AuthorizeException authex) {
-                request.setAttribute("submitters_button", new Boolean(false));
+                request.setAttribute("submitters_button", Boolean.FALSE);
             }
             
             try 
             {
                 AuthorizeUtil.authorizeManageWorkflowsGroup(context, newCollection);                
-                request.setAttribute("workflows_button", new Boolean(true));
+                request.setAttribute("workflows_button", Boolean.TRUE);
             }
             catch (AuthorizeException authex) {
-                request.setAttribute("workflows_button", new Boolean(false));
+                request.setAttribute("workflows_button", Boolean.FALSE);
             }
             
             try 
             {
                 AuthorizeUtil.authorizeManageTemplateItem(context, newCollection);                
-                request.setAttribute("template_button", new Boolean(true));
+                request.setAttribute("template_button", Boolean.TRUE);
             }
             catch (AuthorizeException authex) {
-                request.setAttribute("template_button", new Boolean(false));
+                request.setAttribute("template_button", Boolean.FALSE);
             }
             
             JSPManager.showJSP(request, response,
@@ -289,8 +259,6 @@ public class CollectionWizardServlet extends DSpaceServlet
             Collection collection) throws SQLException, ServletException,
             IOException, AuthorizeException
     {
-        Group anonymousGroup = Group.find(context, 0);
-
         // "Public read" checkbox. Only need to do anything
         // if it's not checked (only system admin can uncheck this!).
         if (!UIUtil.getBoolParameter(request, "public_read")
@@ -307,7 +275,7 @@ public class CollectionWizardServlet extends DSpaceServlet
         if (UIUtil.getBoolParameter(request, "submitters"))
         {
             // Create submitters group
-            Group g = collection.createSubmitters();
+            collection.createSubmitters();
         }
 
         // Check for the workflow steps
@@ -316,7 +284,7 @@ public class CollectionWizardServlet extends DSpaceServlet
             if (UIUtil.getBoolParameter(request, "workflow" + i))
             {
                 // should have workflow step i
-                Group g = collection.createWorkflowGroup(i);
+                collection.createWorkflowGroup(i);
             }
         }
 
@@ -324,7 +292,7 @@ public class CollectionWizardServlet extends DSpaceServlet
         if (UIUtil.getBoolParameter(request, "admins"))
         {
             // Create administrators group
-            Group g = collection.createAdministrators();
+            collection.createAdministrators();
         }
 
         // Default item stuff?
@@ -367,7 +335,6 @@ public class CollectionWizardServlet extends DSpaceServlet
         if (UIUtil.getBoolParameter(request, "mitgroup"))
         {
             Group mitGroup = Group.findByName(context, "MIT Users");
-            int action;
 
             if (permission == PERM_READ)
             {
@@ -436,14 +403,14 @@ public class CollectionWizardServlet extends DSpaceServlet
         }
 
         // Add people and groups from the form to the group
-        int[] eperson_ids = UIUtil.getIntParameters(request, "eperson_id");
-        int[] group_ids = UIUtil.getIntParameters(request, "group_ids");
+        int[] epersonIds = UIUtil.getIntParameters(request, "eperson_id");
+        int[] groupIds = UIUtil.getIntParameters(request, "group_ids");
         
-        if (eperson_ids != null)
+        if (epersonIds != null)
         {
-            for (int i = 0; i < eperson_ids.length; i++)
+            for (int i = 0; i < epersonIds.length; i++)
             {
-                EPerson eperson = EPerson.find(context, eperson_ids[i]);
+                EPerson eperson = EPerson.find(context, epersonIds[i]);
 
                 if (eperson != null)
                 {
@@ -452,11 +419,11 @@ public class CollectionWizardServlet extends DSpaceServlet
             }
         }
         
-        if (group_ids != null)
+        if (groupIds != null)
         {
-            for (int i = 0; i < group_ids.length; i++)
+            for (int i = 0; i < groupIds.length; i++)
             {
-                Group group = Group.find(context, group_ids[i]);
+                Group group = Group.find(context, groupIds[i]);
             
                 if (group != null)
                 {
@@ -522,7 +489,7 @@ public class CollectionWizardServlet extends DSpaceServlet
         // nothing was entered
         String license = wrapper.getParameter("license");
 
-        if ((license != null) || "".equals(license))
+        if (!StringUtils.isEmpty(license))
         {
             collection.setLicense(license);
         }
@@ -560,7 +527,10 @@ public class CollectionWizardServlet extends DSpaceServlet
             logoBS.update();
 
             // Remove temp file
-            temp.delete();
+            if (!temp.delete())
+            {
+                log.trace("Unable to delete temporary file");
+            }
         }
 
         collection.update();
@@ -638,7 +608,7 @@ public class CollectionWizardServlet extends DSpaceServlet
         // FIXME: Not a nice hack -- do we show the MIT users checkbox?
         if (Group.findByName(context, "MIT Users") != null)
         {
-            request.setAttribute("mitgroup", new Boolean(true));
+            request.setAttribute("mitgroup", Boolean.TRUE);
         }
 
         log.debug(LogManager.getHeader(context, "nextpage", "stage=" + stage));
@@ -649,14 +619,14 @@ public class CollectionWizardServlet extends DSpaceServlet
 
             // Next page is 'permission to read' page iff ITEM_DEFAULT_READ
             // for anonymous group is NOT there
-            List anonReadPols = AuthorizeManager.getPoliciesActionFilter(
+            List<ResourcePolicy> anonReadPols = AuthorizeManager.getPoliciesActionFilter(
                     context, collection, Constants.DEFAULT_ITEM_READ);
 
             // At this stage, if there's any ITEM_DEFAULT_READ, it can only
             // be an anonymous one.
             if (anonReadPols.size() == 0)
             {
-                request.setAttribute("permission", new Integer(PERM_READ));
+                request.setAttribute("permission", Integer.valueOf(PERM_READ));
                 JSPManager.showJSP(request, response,
                         "/dspace-admin/wizard-permissions.jsp");
 
@@ -669,7 +639,7 @@ public class CollectionWizardServlet extends DSpaceServlet
             // defined
             if (collection.getSubmitters() != null)
             {
-                request.setAttribute("permission", new Integer(PERM_SUBMIT));
+                request.setAttribute("permission", Integer.valueOf(PERM_SUBMIT));
                 JSPManager.showJSP(request, response,
                         "/dspace-admin/wizard-permissions.jsp");
 
@@ -682,7 +652,7 @@ public class CollectionWizardServlet extends DSpaceServlet
             // defined
             if (collection.getWorkflowGroup(1) != null)
             {
-                request.setAttribute("permission", new Integer(PERM_WF1));
+                request.setAttribute("permission", Integer.valueOf(PERM_WF1));
                 JSPManager.showJSP(request, response,
                         "/dspace-admin/wizard-permissions.jsp");
 
@@ -695,7 +665,7 @@ public class CollectionWizardServlet extends DSpaceServlet
             // defined
             if (collection.getWorkflowGroup(2) != null)
             {
-                request.setAttribute("permission", new Integer(PERM_WF2));
+                request.setAttribute("permission", Integer.valueOf(PERM_WF2));
                 JSPManager.showJSP(request, response,
                         "/dspace-admin/wizard-permissions.jsp");
 
@@ -708,7 +678,7 @@ public class CollectionWizardServlet extends DSpaceServlet
             // defined
             if (collection.getWorkflowGroup(3) != null)
             {
-                request.setAttribute("permission", new Integer(PERM_WF3));
+                request.setAttribute("permission", Integer.valueOf(PERM_WF3));
                 JSPManager.showJSP(request, response,
                         "/dspace-admin/wizard-permissions.jsp");
 
@@ -721,7 +691,7 @@ public class CollectionWizardServlet extends DSpaceServlet
             // administrator group
             if (collection.getAdministrators() != null)
             {
-                request.setAttribute("permission", new Integer(PERM_ADMIN));
+                request.setAttribute("permission", Integer.valueOf(PERM_ADMIN));
                 JSPManager.showJSP(request, response,
                         "/dspace-admin/wizard-permissions.jsp");
 
