@@ -1,41 +1,9 @@
-/*
- * EditItemServlet.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision$
- *
- * Date: $Date$
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.webui.servlet.admin;
 
@@ -49,9 +17,9 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 import java.util.StringTokenizer;
 
 import javax.servlet.ServletException;
@@ -64,7 +32,6 @@ import org.dspace.app.webui.servlet.DSpaceServlet;
 import org.dspace.app.webui.util.FileUploadRequest;
 import org.dspace.app.webui.util.JSPManager;
 import org.dspace.app.webui.util.UIUtil;
-import org.dspace.authorize.AuthorizeConfiguration;
 import org.dspace.authorize.AuthorizeException;
 import org.dspace.authorize.AuthorizeManager;
 import org.dspace.content.Bitstream;
@@ -170,7 +137,7 @@ public class EditItemServlet extends DSpaceServlet
         {
             if (showError)
             {
-                request.setAttribute("invalid.id", new Boolean(true));
+                request.setAttribute("invalid.id", Boolean.TRUE);
             }
 
             JSPManager.showJSP(request, response, "/tools/get-item-id.jsp");
@@ -325,13 +292,19 @@ public class EditItemServlet extends DSpaceServlet
                 {
                         Collection fromCollection = Collection.find(context, UIUtil.getIntParameter(request, "collection_from_id"));
                         Collection toCollection = Collection.find(context, UIUtil.getIntParameter(request, "collection_to_id"));
-                                    
+
+                        Boolean inheritPolicies = false;
+                        if (request.getParameter("inheritpolicies") != null)
+                        {
+                            inheritPolicies = true;
+                        }
+
                         if (fromCollection == null || toCollection == null)
                         {
                                 throw new ServletException("Missing or incorrect collection IDs for moving item");
                         }
                                     
-                        item.move(fromCollection, toCollection);
+                        item.move(fromCollection, toCollection, inheritPolicies);
                     
                     showEditForm(context, request, response, item);
         
@@ -355,7 +328,7 @@ public class EditItemServlet extends DSpaceServlet
     /**
      * Throw an exception if user isn't authorized to edit this item
      *
-     * @param context
+     * @param c
      * @param item
      */
     private void checkEditAuthorization(Context c, Item item)
@@ -418,7 +391,7 @@ public class EditItemServlet extends DSpaceServlet
         MetadataField[] types = MetadataField.findAll(context);
         
         // Get a HashMap of metadata field ids and a field name to display
-        HashMap metadataFields = new HashMap();
+        Map<Integer, String> metadataFields = new HashMap<Integer, String>();
         
         // Get all existing Schemas
         MetadataSchema[] schemas = MetadataSchema.findAll(context);
@@ -429,7 +402,7 @@ public class EditItemServlet extends DSpaceServlet
             MetadataField[] fields = MetadataField.findAllInSchema(context, schemas[i].getSchemaID());
             for (int j = 0; j < fields.length; j++)
             {
-                Integer fieldID = new Integer(fields[j].getFieldID());
+                Integer fieldID = Integer.valueOf(fields[j].getFieldID());
                 String displayName = "";
                 displayName = schemaName + "." + fields[j].getElement() + (fields[j].getQualifier() == null ? "" : "." + fields[j].getQualifier());
                 metadataFields.put(fieldID, displayName);
@@ -440,51 +413,51 @@ public class EditItemServlet extends DSpaceServlet
         try
         {
             AuthorizeUtil.authorizeManageItemPolicy(context, item);
-            request.setAttribute("policy_button", new Boolean(true));
+            request.setAttribute("policy_button", Boolean.TRUE);
         }
         catch (AuthorizeException authex)
         {
-            request.setAttribute("policy_button", new Boolean(false));
+            request.setAttribute("policy_button", Boolean.FALSE);
         }
         
         if (AuthorizeManager.authorizeActionBoolean(context, item
                 .getParentObject(), Constants.REMOVE))
         {
-            request.setAttribute("delete_button", new Boolean(true));
+            request.setAttribute("delete_button", Boolean.TRUE);
         }
         else
         {
-            request.setAttribute("delete_button", new Boolean(false));
+            request.setAttribute("delete_button", Boolean.FALSE);
         }
         
         try
         {
             AuthorizeManager.authorizeAction(context, item, Constants.ADD);
-            request.setAttribute("create_bitstream_button", new Boolean(true));
+            request.setAttribute("create_bitstream_button", Boolean.TRUE);
         }
         catch (AuthorizeException authex)
         {
-            request.setAttribute("create_bitstream_button", new Boolean(false));
+            request.setAttribute("create_bitstream_button", Boolean.FALSE);
         }
         
         try
         {
             AuthorizeManager.authorizeAction(context, item, Constants.REMOVE);
-            request.setAttribute("remove_bitstream_button", new Boolean(true));
+            request.setAttribute("remove_bitstream_button", Boolean.TRUE);
         }
         catch (AuthorizeException authex)
         {
-            request.setAttribute("remove_bitstream_button", new Boolean(false));
+            request.setAttribute("remove_bitstream_button", Boolean.FALSE);
         }
         
         try
         {
             AuthorizeUtil.authorizeManageCCLicense(context, item);
-            request.setAttribute("cclicense_button", new Boolean(true));
+            request.setAttribute("cclicense_button", Boolean.TRUE);
         }
         catch (AuthorizeException authex)
         {
-            request.setAttribute("cclicense_button", new Boolean(false));
+            request.setAttribute("cclicense_button", Boolean.FALSE);
         }
         
         if (!item.isWithdrawn())
@@ -492,11 +465,11 @@ public class EditItemServlet extends DSpaceServlet
             try
             {
                 AuthorizeUtil.authorizeWithdrawItem(context, item);
-                request.setAttribute("withdraw_button", new Boolean(true));
+                request.setAttribute("withdraw_button", Boolean.TRUE);
             }
             catch (AuthorizeException authex)
             {
-                request.setAttribute("withdraw_button", new Boolean(false));
+                request.setAttribute("withdraw_button", Boolean.FALSE);
             }
         }
         else
@@ -504,11 +477,11 @@ public class EditItemServlet extends DSpaceServlet
             try
             {
                 AuthorizeUtil.authorizeReinstateItem(context, item);
-                request.setAttribute("reinstate_button", new Boolean(true));
+                request.setAttribute("reinstate_button", Boolean.TRUE);
             }
             catch (AuthorizeException authex)
             {
-                request.setAttribute("reinstate_button", new Boolean(false));
+                request.setAttribute("reinstate_button", Boolean.FALSE);
             }
         }
         
@@ -551,22 +524,18 @@ public class EditItemServlet extends DSpaceServlet
         Enumeration unsortedParamNames = request.getParameterNames();
 
         // Put them in a list
-        List sortedParamNames = new LinkedList();
+        List<String> sortedParamNames = new LinkedList<String>();
 
         while (unsortedParamNames.hasMoreElements())
         {
-            sortedParamNames.add(unsortedParamNames.nextElement());
+            sortedParamNames.add((String)unsortedParamNames.nextElement());
         }
 
         // Sort the list
         Collections.sort(sortedParamNames);
 
-        Iterator iterator = sortedParamNames.iterator();
-
-        while (iterator.hasNext())
+        for (String p : sortedParamNames)
         {
-            String p = (String) iterator.next();
-
             if (p.startsWith("value"))
             {
                 /*
@@ -600,10 +569,14 @@ public class EditItemServlet extends DSpaceServlet
                 String language = request.getParameter("language_" + key + "_"
                         + sequenceNumber);
 
-                // Empty string language = null
-                if ((language != null) && language.equals(""))
+                // trim language and set empty string language = null
+                if (language != null)
                 {
-                    language = null;
+                    language = language.trim();
+                    if (language.equals(""))
+                    {
+                        language = null;
+                    }
                 }
 
                 // Get the authority key if any
@@ -734,10 +707,14 @@ public class EditItemServlet extends DSpaceServlet
             String value = request.getParameter("addfield_value").trim();
             String lang = request.getParameter("addfield_language");
 
-            // Empty language = null
-            if (lang.equals(""))
+            // trim language and set empty string language = null
+            if (lang != null)
             {
-                lang = null;
+                lang = lang.trim();
+                if (lang.equals(""))
+                {
+                    lang = null;
+                }
             }
 
             MetadataField field = MetadataField.find(context, dcTypeID);
@@ -854,7 +831,10 @@ public class EditItemServlet extends DSpaceServlet
         showEditForm(context, request, response, item);
 
         // Remove temp file
-        temp.delete();
+        if (!temp.delete())
+        {
+            log.error("Unable to delete temporary file");
+        }
 
         // Update DB
         context.complete();
